--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.intranda.goobi.plugins.step</groupId>
-  <artifactId>move-folder</artifactId>
+  <artifactId>move-folder-to-master</artifactId>
   <version>${goobi.pluginversion}</version>
   <packaging>pom</packaging>
   <properties>
