--- a/plugin/module-main/pom.xml
+++ b/plugin/module-main/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>de.intranda.goobi.plugins.step</groupId>
     <artifactId>move-folder-to-master</artifactId>
-    <version>${goobi.pluginversion}</version>
+    <version>23.04.1</version>
   </parent>
   <repositories>
     <repository>
