--- a/plugin/module-main/pom.xml
+++ b/plugin/module-main/pom.xml
@@ -2,6 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.intranda.goobi.plugins.step</groupId>
   <artifactId>move-folder-to-master-main</artifactId>
+  <version>23.05</version>
   <parent>
     <groupId>de.intranda.goobi.plugins.step</groupId>
     <artifactId>move-folder-to-master</artifactId>
